--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "flowbite-react": "^0.10.1",
     "next": "14.2.4",
     "next-redux-wrapper": "^8.1.0",
     "react": "^18",
