--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@types/node": "22.4.1",
+    "@types/react": "18.3.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
